# openapi.yaml
@@ -14,71 +14,34 @@ externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 servers:
-- url: https://petstore.swagger.io/v2
-- url: http://petstore.swagger.io/v2
+# Added by API Auto Mocking Plugin
+- description: SwaggerHub API Auto Mocking
+  url: http://localhost:3000
+- url: https://transportation-schedules.herokuapp.com/
+- url: https://virtserver.swaggerhub.com/FabioTomaz/TransportationSchedules/1.0.0
 tags:
-- name: transit GTFS
-  description: Everything related to GTFS 
-  externalDocs:
-    description: Find out more
-    url: http://swagger.io
-- name: static
-  description: Static GTFS
+- name: Routes
+  description: Routing Endpoints 
+- name: Agencies
+  description: Agencies Endpoints
+- name: Stops
+  description: Stops Endpoints
+- name: GTFS
+  description: General Transportation Format Specification
   externalDocs:
     description: Find more about static GTFS
     url: https://developers.google.com/transit/gtfs
-- name: realtime
-  description: Realtime GTFS
-  externalDocs:
-    description: Find more about realtime GTFS
-    url: http://swagger.io
 paths:
-  /gtfs/static/{gtfsId}:
-    get:
+  /gtfs/{gtfsId}:
+    delete:
       tags:
-      - static
-      summary: Find gtfs by ID
-      description: Returns a single GTFS
-      operationId: getPetById
+      - GTFS
+      summary: Deletes a gtfs
+      operationId: deleteGtfs
       parameters:
       - name: gtfsId
         in: path
-        description: ID of gtfs to return
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/GTFS'
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GTFS'
-        400:
-          description: Invalid ID supplied
-          content: {}
-        404:
-          description: Pet not found
-          content: {}
-      security:
-      - api_key: []
-    delete:
-      tags:
-      - static
-      summary: Deletes a gtfs
-      operationId: deletePet
-      parameters:
-      - name: api_key
-        in: header
-        schema:
-          type: string
-      - name: petId
-        in: path
-        description: Pet id to delete
+        description: Gtfs id to delete
         required: true
         schema:
           type: integer
@@ -90,191 +53,241 @@ paths:
         404:
           description: Pet not found
           content: {}
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets 
-  /gtfs/static:
-    get:
-      tags:
-      - static
-      summary: Returns all static GTFS's
-      operationId: getInventory
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: object
-                additionalProperties:
-                  type: integer
-                  format: int32
-      security:
-      - api_key: []
-      /schedule:
+  /gtfs:
     post:
       tags:
-      - static
+      - GTFS
       summary: Uploud new gtfs
       description: This can only be done by the logged in user.
       operationId: createUser
       requestBody:
-        description: Created user object
         content:
-          '*/*':
+          application/octet-stream:
             schema:
-              $ref: '#/components/schemas/Schedule'
+              type: string
+              format: binary
         required: true
       responses:
         default:
           description: successful operation
           content: {}
-  /schedule:
-    post:
-      tags:
-      - schedule
-      summary: Create new schedule
-      description: This can only be done by the logged in user.
-      operationId: createUser
-      requestBody:
-        description: Created user object
-        content:
-          '*/*':
-            schema:
-              $ref: '#/components/schemas/Schedule'
-        required: true
-      responses:
-        default:
-          description: successful operation
-          content: {}
-  /schedule/{scheduleId}:
+  /route/{routeId}:
     get:
       tags:
-      - schedule
-      summary: Get user by schedule id
-      operationId: getUserByName
+      - Routes
+      summary: Get a specific route
+      description: Returns a single route from a routeId and a agencyKey
+      operationId: getRouteById
       parameters:
-      - name: username
+      - name: routeId
         in: path
-        description: 'The name that needs to be fetched. Use user1 for testing. '
+        description: ID of the route to return
         required: true
         schema:
-          type: string
+          type: integer
+          format: int64
       responses:
         200:
           description: successful operation
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Schedule'
             application/json:
               schema:
-                $ref: '#/components/schemas/Schedule'
+                $ref: '#/components/schemas/Route'
         400:
-          description: Invalid username supplied
+          description: Invalid ID supplied
           content: {}
         404:
-          description: User not found
+          description: Pet not found
           content: {}
-    put:
+  /route/{fromStopId}/{toStopId}:
+    get:
       tags:
-      - schedule
-      summary: Update schedule
-      description: This can only be done by the logged in user.
-      operationId: updateUser
+      - Routes
+      summary: Route trajectory between stops
+      description: Returns a trajectory between the stop ids specified. Also returns data like fares, stops in the middle etc.
+      operationId: routingBetweenStops
       parameters:
-      - name: username
+      - name: fromStopId
         in: path
-        description: name that need to be updated
+        description: ID of the stop to departure from
         required: true
         schema:
-          type: string
-      requestBody:
-        description: Updated user object
-        content:
-          '*/*':
-            schema:
-              $ref: '#/components/schemas/User'
-        required: true
-      responses:
-        400:
-          description: Invalid user supplied
-          content: {}
-        404:
-          description: User not found
-          content: {}
-    delete:
-      tags:
-      - schedule
-      summary: Delete schedule
-      description: This can only be done by the logged in user.
-      operationId: deleteUser
-      parameters:
-      - name: username
+          type: integer
+          format: int64
+      - name: toStopId
         in: path
-        description: The name that needs to be deleted
+        description: ID of the stop to arrive to
         required: true
         schema:
-          type: string
+          type: integer
+          format: int64
+      - name: departureDate
+        in: query
+        schema:
+          type: integer
+          format: int64
+        description: The number of items to skip before starting to collect the result set
+      - name: arrivalDate
+        in: query
+        schema:
+          type: integer
+        description: The numbers of items to return
       responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Route'
         400:
-          description: Invalid username supplied
+          description: Invalid stopId
           content: {}
         404:
-          description: User not found
+          description: No route available
           content: {}
+  /agency:
+      get:
+        tags:
+        - Agencies
+        summary: Get all transportation agencies
+        description: Returns all agencies stored frmo GTFS's uplouded
+        operationId: getAgencies
+        responses:
+          200:
+            description: successful operation
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Agency'
+          400:
+            description: Invalid ID supplied
+            content: {}
+          404:
+            description: Pet not found
+            content: {}    
+  /agency/{agencyId}:
+      get:
+        tags:
+        - Agencies
+        summary: Get a specific transportation agency
+        description: Returns a single agency from agencyKey
+        operationId: getAgencyById
+        parameters:
+        - name: agencyId
+          in: path
+          description: ID of the route to return
+          required: true
+          schema:
+            type: integer
+            format: int64
+        responses:
+          200:
+            description: successful operation
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Agency'
+          400:
+            description: Invalid ID supplied
+            content: {}
+          404:
+            description: Pet not found
+            content: {}    
+  /stop:
+      get:
+        tags:
+        - Stops
+        summary: Get all stops
+        description: Returns all stops stored from GTFS's uplouded
+        operationId: getStops
+        responses:
+          200:
+            description: successful operation
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Stop'
+          400:
+            description: Invalid ID supplied
+            content: {}
+          404:
+            description: Pet not found
+            content: {}    
+  /stop/{stopId}:
+      get:
+        tags:
+        - Stops
+        summary: Get a specific transportation agency
+        description: Returns a single stop 
+        operationId: getStopById
+        parameters:
+        - name: stopId
+          in: path
+          description: ID of the stop to return
+          required: true
+          schema:
+            type: integer
+            format: int64
+        responses:
+          200:
+            description: successful operation
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Stop'
+          400:
+            description: Invalid ID supplied
+            content: {}
+          404:
+            description: Stop not found
+            content: {}    
 components:
   schemas:
-    Schedule:
+    Agency:
       type: object
       properties:
-        id:
+        agency_key:
+          type: string
+        agency_id:
           type: integer
           format: int64
-        name:
+        agency_name:
           type: string
-        owner_id:
+        agency_url:
           type: string
-        timezone:
+        agency_timezone:
           type: string
-        intervals:
+        agency_lang:
           type: string
-        created_at:
+        agency_phone:
           type: string
-        updated_at:
-          type: string
-        freq_type:
-          type: integer
-        version_number:
-          type: integer
-      xml:
-        name: User
-    Interval:
+    Route:
       type: object
       properties:
-        start: 
+        agency_key: 
           type: string
-        end:
+        route_id:
           type: string
-        repeat:
+        route_name:
           type: boolean
-        tags:
+        route_type:
+          type: string
+        route_url:
           type: string
         
-    GTFS:
-      required:
-      - name
+    Stop:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
-        name:
+        agency_key: 
           type: string
-          example: doggie
-      xml:
-        name: Pet
+        stop_id:
+          type: string
+        stop_name:
+          type: boolean
+        stop_lat:
+          type: string
+        stop_lon:
+          type: string
   securitySchemes:
     petstore_auth:
       type: oauth2
